QA: Fix Product Hero margins, remove global site border, add single Hero image full bleed styling  (#196)
* Fix hero margins

* Add cookie consent hi res image

* Remove global site border

--- a/theme/styles/global.scss
+++ b/theme/styles/global.scss
@@ -27,9 +27,8 @@
   }
 }
 
-/* Global site border and offset for Nav height */
+/* Offset for Nav height */
 body {
-  border: solid $site-border color('white');
   padding-top: $nav-height;
 
   @include media('md-up') {
